--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#CONFIGURATION
+server.port = 8080
+
+#DATA SOURCE CONFIGURATION
+spring.datasource.url = jdbc:mysql://localhost:3306/fooddb
+spring.datasource.username = root
+spring.datasource.password = root
+
+#HIBERNATE CONFIGURATION
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql = true 
 
